--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
   <!-- 랜딩페이지 인트로에 쓰일 폰트 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@200&display=swap" rel="stylesheet">
+
+  <style>
+    #root {
+      width: 100%;
+      /* height: auto; */
+    }
+  </style>
 </head>
 
 <body>
